messages: remove header / i18n

--- a/of/po/en/openfoundry.po
+++ b/of/po/en/openfoundry.po
@@ -379,7 +379,7 @@ msgstr "Icon"
 
 #: app/models/project.rb:- app/views/projects/show.rhtml:23
 msgid "Project|Name"
-msgstr "Project name"
+msgstr "Project Name"
 
 #: app/models/project.rb:- app/views/projects/show.rhtml:24
 msgid "Project|Summary"
