--- a/of/po/en/openfoundry.po
+++ b/of/po/en/openfoundry.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: openfoundry 0.1\n"
-"POT-Creation-Date: 2008-08-06 06:19-0000\n"
+"POT-Creation-Date: 2008-08-06 10:31-0000\n"
 "PO-Revision-Date: 2007-05-16 03:50-0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1447,7 +1447,7 @@ msgid "menu_WebHosting"
 msgstr "WebHosting"
 
 #: app/views/partials/_top_menu_data.rhtml:21
-#: app/views/partials/_top_menu_data.rhtml:38
+#: app/views/partials/_top_menu_data.rhtml:38 app/views/projects/new.rhtml:2
 #, fuzzy
 msgid "Create Project"
 msgstr "New Project"
@@ -1564,6 +1564,34 @@ msgstr ""
 msgid "Steering Organization"
 msgstr ""
 
+#: app/views/layouts/rt.rhtml:6
+msgid "rt_issue_tracker"
+msgstr "Issue Tracker"
+
+#: app/views/layouts/rt.rhtml:10
+msgid "rt_overview"
+msgstr "Overview"
+
+#: app/views/layouts/rt.rhtml:11
+msgid "rt_defect"
+msgstr "Defect"
+
+#: app/views/layouts/rt.rhtml:12
+msgid "rt_patch"
+msgstr "Patch"
+
+#: app/views/layouts/rt.rhtml:13
+msgid "rt_task"
+msgstr "Task"
+
+#: app/views/layouts/rt.rhtml:14
+msgid "rt_feature"
+msgstr "Feature"
+
+#: app/views/layouts/rt.rhtml:15
+msgid "rt_enhancement"
+msgstr "Enhancement"
+
 #: app/views/layouts/admin.rhtml:6
 msgid "OpenFoundry"
 msgstr ""
@@ -1573,7 +1601,7 @@ msgstr ""
 msgid "Update"
 msgstr "Summary"
 
-#: app/views/releases/new.rhtml:19
+#: app/views/releases/new.rhtml:19 app/views/projects/new.rhtml:6
 #, fuzzy
 msgid "Create"
 msgstr "Creator"
@@ -1697,12 +1725,12 @@ msgstr ""
 msgid "Project|HOMEPAGE"
 msgstr "Project Homepage"
 
-#: app/views/projects/show.rhtml:50 app/views/projects/test_action.rhtml:17
+#: app/views/projects/show.rhtml:50
 #, fuzzy
 msgid "Project Participants"
 msgstr "License"
 
-#: app/views/projects/show.rhtml:57 app/views/projects/test_action.rhtml:24
+#: app/views/projects/show.rhtml:57
 #, fuzzy
 msgid "Project Participants (grouped by role)"
 msgstr "License"
