--- a/trunk/of/po/en/openfoundry.po
+++ b/trunk/of/po/en/openfoundry.po
@@ -1690,7 +1690,7 @@ msgstr "License Wizard"
 #: app/views/partials/_top_menu_data.rhtml:46
 #: app/views/projects/test_action_i18n______________.rhtml:83
 msgid "menu_LW_manual_link"
-msgstr "http://www.openfoundry.org/en/LicenseWizard/LicenseWizard.html"
+msgstr "http://www.openfoundry.org/en/LicenseWizard.html"
 
 #: app/views/partials/_top_menu_data.rhtml:44
 #: app/views/partials/_top_menu_data.rhtml:45
