[Bugfix #37163] Correct the name of button in the 'Permission Edit' page.

--- a/of/po/en/openfoundry.po
+++ b/of/po/en/openfoundry.po
@@ -2754,7 +2754,7 @@ msgstr "Project name"
 #: app/views/projects/_role_new.rhtml:8
 #: app/views/projects/permission_edit.rhtml:11
 msgid "New"
-msgstr ""
+msgstr "Add"
 
 #: app/views/projects/member_edit.rhtml:8
 #, fuzzy
