--- a/trunk/of/po/zh_TW/openfoundry.po
+++ b/trunk/of/po/zh_TW/openfoundry.po
@@ -1534,7 +1534,7 @@ msgstr "電子郵件更新成功，請到您所填入的電子郵件信箱回覆
 
 #: app/controllers/user_controller.rb:264
 msgid "user_change_email_error"
-msgstr "密碼更新失敗"
+msgstr "電子郵件更新失敗(您所填入的電子郵件可能已被註冊！)"
 
 #: app/controllers/user_controller.rb:296
 msgid "user_updated_password"
