add breadcrumb translation and add module_name in dashboard

--- a/branches/sso/of/of/config/locales/zh_TW.yml
+++ b/branches/sso/of/of/config/locales/zh_TW.yml
@@ -15,6 +15,7 @@ zh_TW:
   "Survey": "下載者資料"
   "menu_WebHosting": "專案網頁空間"
   "Projects": "專案"
+  "dashboard": "專案管理"
   "required_icon": "必填"
   "breadcrumb|vcs_access": "版本控制存取方式"
   "breadcrumb|my_projects": "我參與的專案"
@@ -36,6 +37,8 @@ zh_TW:
   "breadcrumb|sympa": "通訊論壇"
   "breadcrumb|member_edit": "成員管理"
   "breadcrumb|reviews": "下載者資料"
+  "breadcrumb|search": "搜尋"
+  "breadcrumb|openfoundry": "OpenFoundry"
   "User|Login": "帳號名稱"
   "User|Email": "電子郵件"
   "User|Realname": "真實姓名"
