fix projects member_edit translation missing bug

--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -394,7 +394,7 @@ en:
   "No Version Control System": "No Version Control System"
   "This project is not using any version control system.": "This project is not using any version control system."
   "Search for New Member": "Search for New Member"
-  "Drop People Here to Remove Them from the group.": "Drop People Here to Remove Them from the group."
+  "Drop People Here to Remove Them from the group": "Drop People Here to Remove Them from the group."
   "Role|Set as ": "Set User into Group"
   "Role|Add": "Add Users"
   "Role|Delete": "Delete Users"
