--- a/branches/sso/of/of/config/locales/zh_TW.yml
+++ b/branches/sso/of/of/config/locales/zh_TW.yml
@@ -397,7 +397,7 @@ zh_TW:
   "No Version Control System": "不使用版本控制系統"
   "This project is not using any version control system.": "本專案不使用版本控制系統"
   "Search for New Member": "找新成員"
-  "Drop People Here to Remove Them from the group.": "將成員拖放到此處刪除"
+  "Drop People Here to Remove Them from the group": "將成員拖放到此處刪除"
   "Role|Set as ": "將使用者加入群組"
   "Role|Add": "加入該群組"
   "Role|Delete": "移除使用者"
