fixed en.yml about Surveys menu

--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -236,8 +236,8 @@ en:
   "OpenFoundry: New Projects Feed": "OpenFoundry News"
   "New projects on OpenFoundry": "OpenFoundry"
   "Version Control System: How to Access": "Version Control System: How to Access"
-  "project menu|Downloaders": "Top Downloads"
-  "project menu|Surveys Edit": "Admin"
+  "project menu|Downloaders": "Downloaders"
+  "project menu|Surveys Edit": "Surveys Edit"
   "Survey|You have to fill the REQUIRED fileds.": "You have to fill the REQUIRED fileds."
   "Project Citations": "Citations"
   "Add Citation": "Add Citation"
@@ -334,7 +334,7 @@ en:
   "How to Access": "How to Access"
   "NSC project": "NSC Project"
   "project_Basic_Information": "Basic Information"
-  "project menu|Surveys": "View"
+  "project menu|Surveys": "Surveys"
   "Projects Menu": "Project name"
   "Personal": "Personal"
   "menu_My Messages": "My Messages"
