'add Dashboard title translation in en.yml'

--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -15,6 +15,7 @@ en:
   "Survey": "Survey"
   "menu_WebHosting": "WebHosting"
   "Projects": "Projects"
+  "dashboard": "Dashboard"
   "required_icon": "Required"
   "breadcrumb|vcs_access": "VCS Access"
   "breadcrumb|my_projects": "My Projects"
