fixed #37673 and add translation

--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -37,6 +37,7 @@ en:
   "breadcrumb|sympa": "Sympa"
   "breadcrumb|member_edit": "Member Control"
   "breadcrumb|reviews": "Survey"
+  "breadcrumb|files": "Files"
   "User|Login": "Login"
   "User|Email": "Email Address"
   "User|Realname": "Realname"
