--- a/branches/sso/of/of/config/locales/zh_TW.yml
+++ b/branches/sso/of/of/config/locales/zh_TW.yml
@@ -39,6 +39,7 @@ zh_TW:
   "breadcrumb|reviews": "下載者資料"
   "breadcrumb|search": "搜尋"
   "breadcrumb|openfoundry": "OpenFoundry"
+  "breadcrumb|files": "files"
   "User|Login": "帳號名稱"
   "User|Email": "電子郵件"
   "User|Realname": "真實姓名"
