add the messages for userprofile if the user has no partners or projects

--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -555,3 +555,6 @@ en:
   "Post a Job": "Post a Job"
   "Hi": "Hi"
   "Download Now": "Download"
+  user_relation:
+    no_partner: "This user has no Partner."
+    no_project: "This user has no published Projects."
