--- a/branches/sso/of/of/config/locales/en.yml
+++ b/branches/sso/of/of/config/locales/en.yml
@@ -440,7 +440,7 @@ en:
   "Workshop": "Workshop"
   "Resource Catalog": "Resource Catalog"
   "About": "About"
-  "template_footer_content": "Open Source Software Foundry‧ Best Viewed with IE7.0 or Firefox2.0 above, 1024x768 Resolution. <strong>E-Mail</strong>：<a href=\"mailto:contact@openfoundry.org\">contact@openfoundry.org</a><br><strong>Address</strong>：No.128, Sec.2, Academia Rd., Institute of Information Science, Academia Sinica, Nangang District, Taipei City 11529, Taiwan (R.O.C)"
+  "template_footer_content": "Open Source Software Foundry‧ Best Viewed with IE7.0 or Firefox2.0 above, 1024x768 Resolution. <strong>E-Mail</strong>：<a href=\"mailto:contact@openfoundry.org\">contact@openfoundry.org</a><br><strong>Address</strong>：No.128, Sec.2, Academia Rd., Institute of Information Science, Academia Sinica, Nangang District, Taipei City 11529, Taiwan (R.O.C)<br><a href=\"http://www.openfoundry.org/en/privacy-policy\">Privacy Policy</a>. <a href=\"http://www.openfoundry.org/en/terms-of-use\">Terms-of-use</a>"
   "Mail|Sincerely, OSSF Team http://www.openfoundry.org": "Sincerely, OSSF Team <a href=\"http://www.openfoundry.org\">http://www.openfoundry.org</a>"
   "Cancel": "Cancel"
   "Top Download": "Top Downloads"
