--- a/branches/sso/of/of/config/locales/zh_TW.yml
+++ b/branches/sso/of/of/config/locales/zh_TW.yml
@@ -442,7 +442,7 @@ zh_TW:
   "Workshop": "工作坊"
   "Resource Catalog": "資源表列"
   "About": "關於"
-  "template_footer_content": "自由軟體鑄造場 製作 最佳瀏覽狀態：IE7或Firefox2.0以上 (建議使用Firefox) ‧ 解析度1024*768<br><strong>E-Mail</strong>：<a href=\"mailto:contact@openfoundry.org\">contact@openfoundry.org</a> <strong>Address</strong>：台北市南港區研究院路2段128號 中央研究院資訊科學研究所"
+  "template_footer_content": "自由軟體鑄造場 製作 最佳瀏覽狀態：IE7或Firefox2.0以上 (建議使用Firefox) ‧ 解析度1024*768<br><strong>E-Mail</strong>：<a href=\"mailto:contact@openfoundry.org\">contact@openfoundry.org</a> <strong>Address</strong>：台北市南港區研究院路2段128號 中央研究院資訊科學研究所<br/><a href=\"http://www.openfoundry.org/privacy-policy\">隱私權條款</a>. <a href=\"http://www.openfoundry.org/terms-of-use\">使用條款</a>"
   "Mail|Sincerely, OSSF Team http://www.openfoundry.org": "Sincerely, OSSF Team <a href=\"http://www.openfoundry.org\">http://www.openfoundry.org</a>"
   "Cancel": "取消"
   "Top Download": "下載排行"
